--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - GF_AUTH_PROXY_HEADER_NAME=X-WEBAUTH-USER
       - GF_AUTH_PROXY_AUTO_SIGN_UP=true
       - GF_AUTH_BASIC_ENABLED=false
-      - GF_AUTH_PROXY_WHITELIST=172.19.0.6
+      - GF_AUTH_PROXY_WHITELIST=yournginxcontainerip
     expose:
       - "3000"
     networks:
